--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -22,31 +22,13 @@
   body{
     @include stick-footer;
     margin: 0;
-    /* font-family: "Roboto", "Arial", sans-serif; */
-    /* font-size: 16px; */
-    /* font-weight: 400; */
-    /* line-height: var(--main-line-height); */
+    font-family: "Poppins", "Arial", sans-serif !important;
+    font-weight: 400 !important;
   }
   
   /* VISUALLY-HIDDEN */
   .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-  
-  /* CONTAINER */
-  .container{
-    // max-width: ;
-    margin: 0 auto;
-    padding: 0px 20px;
+    @include hidden;
   }
 
   /* STICKY-FOOTER */
