--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,6 +4,19 @@
     height: 100%;
 }
 
+@mixin hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 @mixin mobile-first($min){
     @media only screen and (min-width: $min) {
         @content
