--- a/scss/block/_block.scss
+++ b/scss/block/_block.scss
@@ -1,7 +1,10 @@
 @import "container";
 @import "header";
 @import "hero";
-// @import "";
+@import "features";
+@import "product";
+@import "carousel";
+@import "projects";
 
 @import "footer";
 
