--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -24,6 +24,7 @@
     margin: 0;
     font-family: "Poppins", "Arial", sans-serif !important;
     font-weight: 400 !important;
+    overflow-x: hidden; 
   }
   
   /* VISUALLY-HIDDEN */
