--- a/css/main.css
+++ b/css/main.css
@@ -910,6 +910,10 @@ body {
     margin-bottom: 28px;
   }
 }
+.projects {
+  margin-bottom: 103px;
+}
+
 .projects-title-wrap {
   width: 100%;
   max-width: 497px;
@@ -945,6 +949,268 @@ body {
   .projects-text {
     font-size: 14px;
     line-height: 26.25px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .projects-title-wrap {
+    margin-bottom: 71px;
+  }
+  .projects-item:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .projects-item:nth-child(5) {
+    margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .projects {
+    margin-bottom: 201px;
+  }
+  .projects-item:first-child, .projects-item:nth-child(2), .projects-item:nth-child(3) {
+    margin-bottom: 33px;
+  }
+  .projects-img {
+    width: 100%;
+    max-width: none;
+  }
+}
+.about {
+  margin-bottom: 50px;
+}
+
+.about-info-wrap {
+  margin-bottom: 66px;
+  width: 100%;
+  max-width: 536px !important;
+}
+
+.about-title {
+  margin-bottom: 34px;
+  font-size: 22px;
+  line-height: 33px;
+}
+
+.about-text {
+  font-size: 13px;
+  line-height: 20px;
+  color: #515151;
+}
+
+.about-text-start {
+  margin-bottom: 18px;
+}
+
+.about-text-end {
+  margin-bottom: 46px;
+}
+
+.about-link {
+  padding: 13px 44px;
+  background-color: #DC7000;
+}
+
+@media only screen and (min-width: 768px) {
+  .about {
+    margin-bottom: 125px;
+  }
+  .about-info-wrap {
+    margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .about-title {
+    margin-bottom: 43px;
+    font-size: 30px;
+    line-height: 45px;
+  }
+  .about-text {
+    font-size: 17px;
+    line-height: 25.5px;
+  }
+}
+.site-article {
+  margin-bottom: 68px;
+}
+
+.form-wrap {
+  padding: 30px 22px 23px 21px;
+  border-radius: 15px;
+  background-color: #1B1B1B;
+}
+
+.article-title-wrap {
+  margin-bottom: 41px;
+}
+
+.article-title {
+  margin-bottom: 13px;
+  font-size: 20px;
+  color: #222222;
+  line-height: 37.5px;
+}
+
+.article-text {
+  font-size: 12px;
+  color: #525252;
+  line-height: 22.5px;
+}
+
+.form-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  padding: 6px;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.form-text-wrap {
+  margin-bottom: 43px;
+}
+
+.form-title {
+  font-size: 30px;
+  line-height: 45px;
+}
+
+.form-info {
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.form-input {
+  width: 100%;
+  margin-right: 8px;
+  padding-bottom: 4px;
+  border: none;
+  border-bottom: 1px solid transparent;
+  outline: none;
+  text-indent: 10px;
+}
+.form-input::-webkit-input-placeholder {
+  font-size: 13px;
+  font-weight: 300px;
+  color: #898989;
+}
+.form-input::-moz-placeholder {
+  font-size: 13px;
+  font-weight: 300px;
+  color: #898989;
+}
+.form-input:-ms-input-placeholder {
+  font-size: 13px;
+  font-weight: 300px;
+  color: #898989;
+}
+.form-input::-ms-input-placeholder {
+  font-size: 13px;
+  font-weight: 300px;
+  color: #898989;
+}
+.form-input::placeholder {
+  font-size: 13px;
+  font-weight: 300px;
+  color: #898989;
+}
+.form-input:focus {
+  border-bottom-color: #DC7000;
+}
+
+.form-btn {
+  padding: 7px 11px 7px 16px;
+  font-size: 13px;
+  line-height: 20px;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  background-color: #DC7000;
+}
+
+@media only screen and (min-width: 768px) {
+  .site-article {
+    margin-bottom: 148px;
+  }
+  .article-title-wrap {
+    width: 100%;
+    max-width: 545px;
+  }
+  .article-title {
+    margin-bottom: 20px;
+    font-size: 30px;
+    line-height: 56px;
+  }
+  .article-text {
+    font-size: 16px;
+    line-height: 30px;
+  }
+  .form-wrap {
+    padding: 40px 50px 42px 56px;
+  }
+  .form-text-wrap {
+    margin-bottom: 0;
+  }
+  .form-label {
+    max-width: 385px;
+    margin-left: auto;
+    padding-left: 15px;
+  }
+  .form-btn {
+    padding: 8px 13.5px 9px 22.2px;
+  }
+}
+.footer {
+  background-color: #1B1B1B;
+}
+
+.footer-inner {
+  padding: 66px 0 62px 0;
+}
+
+.logo-group {
+  max-width: 372px;
+}
+
+.logo-group-title {
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
+
+.list {
+  padding: 0;
+}
+
+.list-link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.address {
+  max-width: 282px;
+}
+
+.footer-bottom {
+  padding: 29px 0;
+  border-top: 0.8px solid #D2D2D2;
+}
+
+.footer-text {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 190.6%;
+}
+
+.title-size {
+  font-size: 20px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-about-list {
+    margin-right: 130px;
   }
 }
 /*!
