--- a/scss/block/_projects.scss
+++ b/scss/block/_projects.scss
@@ -66,6 +66,10 @@
         margin-bottom: 201px;
     }
 
+    .projects-wrap{
+        padding: 0px 50px;
+    }
+
     .projects-item{
 
         &:first-child,
