--- a/css/main.css
+++ b/css/main.css
@@ -493,34 +493,29 @@ body {
   position: absolute;
   top: 71px;
   right: 0;
+  display: none;
   width: 100%;
   max-width: 375px;
   padding: 50px 20px;
-  background-color: #FCEFE2;
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transition: opacity 0.3s ease;
-  transition: opacity 0.3s ease;
+  background-image: linear-gradient(90.05deg, #f4a44d -5.66%, #f3a552 115.63%);
 }
 
 .site-header.show .sitenav {
-  opacity: 1;
-  pointer-events: all;
+  display: block;
 }
 
 .sitenav-link {
   font-size: 24px;
-  color: #222222;
+  color: #fff;
 }
 
 .contact-us-btn {
-  padding: 11px 28px;
-  font-family: "Poppins", "Arial", sans-serif !important;
-  font-weight: 400 !important;
+  padding: 10.8px 28.46px 11.09px 27.41px;
   border: none;
   font-size: 13px;
   line-height: 20px;
   color: #DC7000;
+  background-color: #fff;
   border-radius: 6px;
 }
 
@@ -531,12 +526,11 @@ body {
   }
   .sitenav {
     position: static;
-    opacity: 1;
+    display: block;
     width: auto;
     max-width: 100%;
     padding: 0;
-    background-color: transparent;
-    pointer-events: all;
+    background-image: none;
   }
   .sitenav-item:first-child::before {
     display: block;
@@ -564,9 +558,23 @@ body {
     color: #fff;
   }
 }
+@media only screen and (min-width: 992px) {
+  .sitenav-item:first-child {
+    margin-right: 87.5px;
+  }
+  .sitenav-item:nth-child(2) {
+    margin-right: 78.85px;
+  }
+  .sitenav-item:nth-child(3) {
+    margin-right: 64.3px;
+  }
+  .sitenav-item:last-child {
+    margin-right: 68.52px;
+  }
+}
 .hero {
   margin-bottom: 48px;
-  padding: 108px 27px;
+  padding: 108px 26px;
   background-image: url("../../images/hero-bg-mobile.png");
   background-repeat: no-repeat;
   background-size: contain;
@@ -611,9 +619,10 @@ body {
 @media only screen and (min-width: 768px) {
   .hero {
     margin-bottom: 83px;
-    background-image: url("../../images/hero-desktop.png"), url("../../images/hero-bg-mobile.png");
-    background-size: 100% 100%, 100% 70%;
-    background-position: 50%, bottom;
+    background-image: url("../../images/hero-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
   .hero-title {
     font-size: 50px;
@@ -626,6 +635,9 @@ body {
   }
 }
 @media only screen and (min-width: 992px) {
+  .hero-text-wrap {
+    padding: 0px 50px;
+  }
   .hero-text-wrap {
     max-width: 527px;
   }
@@ -679,6 +691,11 @@ body {
   }
   .features-img {
     margin-top: -40px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .features-wrap {
+    padding: 0px 50px;
   }
 }
 .product {
@@ -760,6 +777,11 @@ body {
   }
   .product-item:nth-child(4) {
     margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .product-wrap {
+    padding: 0px 50px;
   }
 }
 .carousel {
@@ -966,6 +988,9 @@ body {
   .projects {
     margin-bottom: 201px;
   }
+  .projects-wrap {
+    padding: 0px 50px;
+  }
   .projects-item:first-child, .projects-item:nth-child(2), .projects-item:nth-child(3) {
     margin-bottom: 33px;
   }
@@ -1018,6 +1043,9 @@ body {
   }
 }
 @media only screen and (min-width: 992px) {
+  .about-wrap {
+    padding: 0px 50px;
+  }
   .about-title {
     margin-bottom: 43px;
     font-size: 30px;
@@ -1055,7 +1083,7 @@ body {
   line-height: 22.5px;
 }
 
-.form-label {
+.input-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1153,13 +1181,18 @@ body {
   .form-text-wrap {
     margin-bottom: 0;
   }
-  .form-label {
+  .input-wrap {
     max-width: 385px;
     margin-left: auto;
     padding-left: 15px;
   }
   .form-btn {
     padding: 8px 13.5px 9px 22.2px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .article-wrap {
+    padding: 0px 50px;
   }
 }
 .footer {
@@ -1200,8 +1233,8 @@ body {
 
 .footer-text {
   font-weight: 400;
-  font-size: 13px;
-  line-height: 190.6%;
+  font-size: 12px;
+  line-height: 23px;
 }
 
 .title-size {
