--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -44,6 +44,11 @@
 }
 
 @include mobile-first(992px){
+
+    .about-wrap{
+        padding: 0px 50px;
+    }
+
     .about-title{
         margin-bottom: 43px;
         font-size: 30px;
